--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "test": "ng test",
     "prepare": "husky install",
     "lint": "ng lint",
-    "pretty-quick":"pretty-quick"
+    "pretty-quick": "pretty-quick"
   },
   "private": true,
   "husky": {
     "hooks": {
-        "pre-commit": "pretty-quick --staged && ng lint && ng test",
-        "pre-push": "ng build --aot true"
+      "pre-commit": "pretty-quick --staged && ng lint && ng test",
+      "pre-push": "ng build --aot true"
     }
   },
   "dependencies": {
@@ -28,6 +28,9 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "husky-init": "^7.0.0",
+    "primeflex": "^3.0.1",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
