--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngxs/logger-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "husky-init": "^7.0.0",
+    "ngx-cookie-service": "^12.0.3",
     "ngx-logger": "^4.3.3",
     "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
