--- a/package.json
+++ b/package.json
@@ -28,15 +28,14 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ngx-translate/core": "^13.0.0",
     "@ngxs/logger-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "husky-init": "^7.0.0",
     "moment": "^2.29.1",
     "ngx-cookie-service": "^12.0.3",
     "ngx-logger": "^4.3.3",
-    "primeflex": "^3.0.1",
-    "primeicons": "^4.1.0",
-    "primeng": "^12.2.0",
+    "ngx-translate-multi-http-loader": "^3.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
