--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@casl/ability": "^5.4.3",
+    "@casl/angular": "^6.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngxs/logger-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
+    "export-from-json": "^1.4.1",
     "husky-init": "^7.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "ngx-cookie-service": "^12.0.3",
     "ngx-logger": "^4.3.3",
@@ -51,6 +55,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@ngxs/devtools-plugin": "^3.7.2",
     "@types/jasmine": "~3.8.0",
+    "@types/lodash": "^4.14.176",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
