--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "husky-init": "^7.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "ng-zorro-antd": "^12.0.1",
     "ngx-cookie-service": "^12.0.3",
     "ngx-logger": "^4.3.3",
     "ngx-translate-multi-http-loader": "^3.0.0",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.3.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
