build: Outlook Authentication, Timezone, Firebase Notifications, Dynamic Components

--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/firebase-messaging-sw.js",
+              "src/manifest.json",
               {
                 "glob": "**/*",
                 "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
@@ -32,6 +34,7 @@
               }
             ],
             "styles": [
+              "node_modules/@delon/theme/default.css",
               "src/styles.css",
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
             ],
