--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "12",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -27,17 +28,37 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ant-design/icons-angular": "*",
     "@auth0/angular-jwt": "^5.0.2",
+    "@azure/msal-angular": "^2.0.5",
+    "@azure/msal-browser": "^2.19.0",
     "@casl/ability": "^5.4.3",
     "@casl/angular": "^6.0.0",
+    "@delon/abc": "~12.4.2",
+    "@delon/acl": "~12.4.2",
+    "@delon/auth": "~12.4.2",
+    "@delon/cache": "~12.4.2",
+    "@delon/chart": "~12.4.2",
+    "@delon/form": "~12.4.2",
+    "@delon/mock": "~12.4.2",
+    "@delon/theme": "~12.4.2",
+    "@delon/util": "~12.4.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngxs/logger-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-selection": "^3.0.1",
+    "ajv": "^8.6.2",
+    "ajv-formats": "^2.1.1",
+    "core-js": "~3.8.3",
     "date-fns": "^2.25.0",
     "export-from-json": "^1.4.1",
+    "firebase": "^9.5.0",
     "husky-init": "^7.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
+    "ng-dynamic-breadcrumb": "^6.0.0",
     "ng-zorro-antd": "^12.0.1",
     "ngx-cookie-service": "^12.0.3",
     "ngx-logger": "^4.3.3",
